test/error/ast/ConstRecursive.mod
MODULE ConstRecursive;
CONST A = A;
END ConstRecursive.
